--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
-body{
+body {
     text-align: center;
-    background-image:url("bg3.jpg");
-    background-repeat: no-repeat;
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
     padding-top: 380px;
 }
-h1{
+
+h1 {
     color: aliceblue;
 }
-.rules{
-    color:black;
-    
+
+.rules {
+    color: black;
+
     text-align: left;
     font-size: 14px;
 }
